# stock_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  readme
agent/: __init__.py  context_manager.py  orchestrator.py  prompt_builder.py  response_renderer.py  tool_call_policy.py
app/: __init__.py  admin_service.py  agent_orchestrator.py  api.py  chat_history_service.py  claude_agent.py  dependencies.py  fallback_orchestrator.py  model_providers.py  report_renderer.py  skill_loader.py  task_scheduler.py  tool_registry.py
architect/: 金融视频解析与智能总结系统详细设计文档.md
artitect/: 金融分析Agent架构详细设计文档.md
config/: app.yaml  asr_term_corrections.yaml  data_source.yaml  database.yaml  entity_aliases.yaml  factor_library.yaml  factor_seed_alpha191.yaml  factor_universe.yaml  market_regime_thresholds.yaml  mcp_servers.yaml  qdrant.yaml  retrieval.yaml  risk_rules.yaml  strategy_router.yaml  video_ocr_denoise.yaml
docs/: 黄金投资逻辑总结.md
engines/: __init__.py
financial_agent/: __init__.py  config.py  models.py  utils.py
mcp_servers/: __init__.py  backtest_server.py  content_server.py  factor_mining_server.py  industry_knowledge_server.py  knowledge_server.py  market_data_server.py  market_regime_server.py  news_event_server.py  portfolio_risk_server.py  portfolio_server.py  retrieval_server.py  strategy_router_server.py  technical_factor_server.py  validation_server.py
scripts/: bootstrap-conda.ps1  ensure_video_runtime.py  login-bilibili.ps1  project-env.ps1  run-bilibili-summary.ps1  start-api.ps1  test.ps1  (+1 more)
(+187 files in other folders)
