[project]
name = "stock-agent"
version = "0.1.0"
description = "Financial analysis agent MVP with technical factors, knowledge base, and API orchestration."
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.67",
  "faster-whisper>=1.1",
  "opencc-python-reimplemented>=0.1.7",
  "fastapi>=0.111",
  "httpx>=0.27",
  "pandas>=2.2",
  "paddleocr>=3.3.1",
  "psycopg[binary]>=3.2",
  "qrcode>=8.2",
  "qdrant-client>=1.11",
  "sqlalchemy>=2.0",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "yt-dlp>=2025.1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.setuptools.packages.find]
include = ["agent*", "app*", "engines*", "financial_agent*", "mcp_servers*", "storage*", "workers*"]
exclude = ["artitect*", "config*", "docs*", "knowledge_base*", "skills*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
